chore: remove rails sprockets css code
Why:
- remove gems
- speed up docker build
- learn about webpacker

--- a/app/javascript/stylesheets/devise/layout.sass
+++ b/app/javascript/stylesheets/devise/layout.sass
@@ -1,5 +1,5 @@
 #devise
-  background-image: asset-url('login_bg.jpg')
+  background-image: url('~images/login_bg.jpg')
   background-repeat: no-repeat
   background-size: cover
   background-attachment: fixed
