--- a/app/views/administration/shared/_navbar.html.slim
+++ b/app/views/administration/shared/_navbar.html.slim
@@ -1,7 +1,7 @@
 = menu do
   button#side-toggle-btn
     = fa_icon("angle-right", class: "fa-2x")
-  = menu_logo "logo.png", administration_root_path
+  = menu_logo "images/logo.png", administration_root_path
 
   button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
     span.navbar-toggler-icon
