--- a/app/views/layouts/admin_area.html.slim
+++ b/app/views/layouts/admin_area.html.slim
@@ -4,7 +4,7 @@ html
     title CMC
     = csrf_meta_tags
 
-    = stylesheet_link_tag 'administration', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_pack_tag 'application'
   body
     #app
       = render 'admin_area/shared/navbar'
