chore: speed up seed
Why: seeds are used on feature tests. So,
speedig up them, will speed up the theature tests.

How: use bulk insert.

--- a/app/views/administration/shared/_navbar.html.slim
+++ b/app/views/administration/shared/_navbar.html.slim
@@ -1,6 +1,6 @@
 = menu do
   button#side-toggle-btn
-    = fa_icon("angle-right", class: "fa-2x")
+    i.fa.fa-2x.fa-angle-right
   = menu_logo "images/logo.png", administration_root_path
 
   button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
