fix: typo calender -> calendar
Why fix: pople do not like typos.

--- a/app/views/administration/dashboards/no_layout_show.slim
+++ b/app/views/administration/dashboards/no_layout_show.slim
@@ -69,7 +69,7 @@ br
   .col-lg-6
     br.d-lg-none
     .card
-      .card-header Calender events
+      .card-header Calendar events
       .card-body
         .table-responsive
           table.table
